<resources>
    <string name="app_name">KP-MART-POMS</string>
    <string name="title_search">Search</string>
    <string name="title_trending">Trending</string>
    <string name="title_lists">Lists</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="email_mandatory">Email *</string>
    <string name="email">Email</string>
    <string name="password">Password *</string>
    <string name="name">Name *</string>
    <string name="restore_password">Restore password</string>
    <string name="login">Login</string>
    <string name="login_google">Login with Google</string>
    <string name="register">Sing in</string>
    <string name="close">Close</string>
    <string name="logout">Logout</string>
    <string name="add_to_list">Add to list</string>
    <string name="no_game_images">There are no game images</string>
    <string name="rate">Rate the game</string>
    <string name="your_rate">Your rate</string>
    <string name="rate_0_100">Type a number between 0 and 100</string>
    <string name="game_rated_successfully">Game rated successfully</string>
    <string name="create_list">Create list</string>
    <string name="list_name">List name</string>
    <string name="share_list">Share list</string>
    <string name="genres_title">Genres:</string>
    <string name="date_title">Release date:</string>
    <string name="platforms_title">Platforms:</string>
    <string name="description">Description</string>
    <string name="storyLine">Story line</string>
    <string name="images">Game images</string>
    <string name="darkMode">Dark Mode</string>
    <string name="lightMode">Light Mode</string>
    <string name="es">Spanish</string>
    <string name="en">English</string>
    <string name="language">Language</string>
    <string name="copyright">Copyright</string>
    <string name="igdb_copyright">All the information related to games shown in this application has been obtained through IGDB API. All rights reserved to IGDB and Twitch</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="share">Share</string>
    <string name="confirm_delete">The element is going to be removed, do you want to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_list">This list is empty</string>
    <string name="list_shared_successfully">The list has been shared successfully</string>
    <string name="game_added_list_successfully">Game added to the list successfully</string>
    <string name="content_game_cover">Game cover image</string>
    <string name="day1">MON</string>
    <string name="day2">TUE</string>
    <string name="day3">WED</string>
    <string name="day4">THU</string>
    <string name="day5">FRI</string>
    <string name="day6">SAT</string>
    <string name="day7">SUN</string>
    <string name="calendar_date_playing_title">Playing since</string>
    <string name="calendar_date_completed_title">Completed on</string>
    <string name="calendar_date_abandoned_title">Abandoned on</string>

    <string name="error_required">The field is required</string>
    <string name="error_mail_not_valid">The email has not a valid format</string>
    <string name="error_same_email">You cannot share a list with yourself</string>
    <string name="error_password_length">The password must be at least 4 characters</string>
    <string name="error_incorrect_user_or_password">The user or password are incorrect</string>
    <string name="error_user_already_exist">The email already exists</string>
    <string name="error_does_not_exist">The user does not exist in the application</string>
    <string name="recover_password_email_send">An email has been sent indicating the steps to follow to recover the password</string>
    <string name="error_unknown">There was an unknown error Please, try it again later</string>
    <string name="error_user_already_has_list">User already has this list</string>
    <string name="error_rate_incorrect">The rate must be between 0 and 100</string>
    <string name="error_no_result">The search has not produced any results</string>
</resources>