<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/baseline_search_20"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/baseline_local_fire_department_24"
        android:title="@string/title_trending" />

    <item
        android:id="@+id/navigation_lists"
        android:icon="@drawable/baseline_format_list_bulleted_20"
        android:title="@string/title_lists" />

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/baseline_calendar_today_24"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/baseline_settings_20"
        android:title="@string/title_settings" />

</menu>