<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_lists">

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.poms.android.gameagregator.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/search_fragment" />

    <fragment
        android:id="@+id/navigation_trending"
        android:name="com.poms.android.gameagregator.ui.trending.TrendingFragment"
        android:label="@string/title_trending"
        tools:layout="@layout/trending_fragment" />

    <fragment
        android:id="@+id/navigation_lists"
        android:name="com.poms.android.gameagregator.ui.lists.ListsFragment"
        android:label="@string/title_lists"
        tools:layout="@layout/lists_fragment" />

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.poms.android.gameagregator.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/calendar_fragment" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.poms.android.gameagregator.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/settings_fragment" />
</navigation>